--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,17 @@ jobs:
       with:
         # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
         creds: ${{ secrets.AZURE_CREDENTIALS }}
+        
+    - name: Azure Resource Manager (ARM) Template Deployment
+      uses: whiteducksoftware/azure-arm-action-js@v1
+      with:
+        # Provide the name of a resource group.
+        resourceGroupName: 
+        # Specify the path to the Azure Resource Manager template.
+        templateLocation: 
+        # Incremental (only add resources to resource group) or Complete (remove extra resources from resource group).
+        deploymentMode: # optional, default is Incremental
+        # Specifies the name of the resource group deployment to create.
+        deploymentName: # optional
+        # Supply deployment parameter values.
+        parameters: # optional
